[tool.poetry]
name = "uniop-proto"
version = "0.1.0"
description = ""
authors = ["Hiroshi Kawase <h.kawase@ntt.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
reflex = "^0.5.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
